Increase height of password combobox to match username field height.

Bug: 774530
Change-Id: I6ce46224cf1e39a5bd6a06d100dca2a0262923e5
Reviewed-on: https://chromium-review.googlesource.com/c/1365800
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Edin Kadric <edinkadric@google.com>
Cr-Commit-Position: refs/heads/master@{#614699}
Former-commit-id: 12e333464200224e17fa040bda0b2152feb9bc06